# sanskrit-rl

./: .gitignore  README.md  pyproject.toml
src/: __init__.py  env.py  generate_dataset.py  prime_wrapper.py  prompts.jsonl  reward.py  test_verifier.py  verifier.py
src/data/: __init__.py  dataset_readme.md  generate_dataset.py  prompts.jsonl  upload_dataset.py
src/sanskrit_meter_rl.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_verifier.py
