[project]
name = "sanskrit-meter-rl"
version = "0.0.1"
description = "Meter verifier + prompt dataset for Sanskrit poetry RL research"
authors = [{name = "Your Name"}]
requires-python = ">=3.9"
dependencies = [
    "chandas",
    "indic-transliteration",
    "gymnasium",
    "numpy",
    "transformers>=4.37.0",
    "torch>=2.2.0",
    "datasets>=2.16.0",
    "huggingface_hub>=0.20.0",
]

[project.optional-dependencies]
dev = ["pytest", "black", "ruff"]
